# employed

./: .gitignore
edr/crowdstrike/arbitrary_queries/: Readme.md  pyproject.toml  requirements-dev.txt  requirements.txt
edr/crowdstrike/arbitrary_queries/config/: settings.json  settings.py  settings.yaml
edr/crowdstrike/arbitrary_queries/data/: cid_registry.json  example_filter.txt
edr/crowdstrike/arbitrary_queries/queries/: example_hunt.txt  lateral_movement.txt  suspicious_powershell.txt
edr/crowdstrike/arbitrary_queries/src/: __init__.py  api_client.py  cli.py  client.py  config.py  executor-2.py  executor.py  output.py  query_executor.py  runner.py  secrets_manager.py
edr/crowdstrike/arbitrary_queries/src/arbitrary_queries/: cli.py  client.py  config.py  logger.py  models.py  output.py  query_executor.py  runner.py  secrets.py
edr/crowdstrike/arbitrary_queries/tests/: conftest.py  readme.md  test_api_client.py  test_cli.py  test_client.py  test_config.py  test_executor.py  test_models.py  test_output.py  test_query_executor.py  test_runner.py  test_secrets.py
edr/crowdstrike/audit/: audit_ioa_exclusions.py
edr/crowdstrike/audit/qa_framework/: README.md  alerts_client.py  config.py  conftest.py  consensus.py  main.py  pytest.ini  report_generator.py  requirements-dev.txt  requirements.txt  sanitizer.py  similarity.py
edr/crowdstrike/audit/qa_framework/tests/: conftest.py  requirements-dev.txt  test_alert_clients.py  test_alerts_client.py  test_consensus.py  test_reports_generator.py  test_sanitizer.py  (+1 more)
edr/crowdstrike/cql/: a_useful_collection_of_snippets
edr/crowdstrike/manage/: copy_parent_to_child_ioa_exclusion.py
